tests/corpus/snapshots/_cargo_toml/base__json.snap
---
source: src/tests/snapshot_tests.rs
expression: toml
---
[package]
name = "cddl-lib"
version = "0.1.0"
edition = "2024"

[package.metadata.cddl-codegen]
generated-with = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["float_roundtrip"] }
schemars = "1.2.1"
