tests/corpus/snapshots/_cargo_toml/base__preserve.snap
---
source: src/tests/snapshot_tests.rs
expression: toml
---
[package]
name = "cddl-lib"
version = "0.1.0"
edition = "2024"

[package.metadata.cddl-codegen]
generated-with = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = { git = "https://github.com/dcSpark/cbor_event", rev = "e2bca6d257f70ab0c226c4efd0726d3f5c1b4490" }
hashlink = "0.12.1"
derivative = { version = "2.2.0", features = ["use_core"] }

[features]
default = ["std"]
std = []
wasm = []
